--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.3.1",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.0"
   },
