--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.17",
+    "@prisma/client": "^5.8.1",
     "clsx": "^2.1.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.5",
