--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18",
     "sonner": "^1.3.1",
     "swr": "^2.2.4",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
