--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "sonner": "^1.3.1",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.0",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
