--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^1.0.17",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
     "clsx": "^2.1.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.5",
