--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.7",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.1.9",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.5",
     "react": "^18",
